--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
                 <div id="adress">profielekter@gmail.com</div>
             </div>
         </div>
-        <div id="menu" class="hide space-x-10 md:flex mr-10 text-[#312103] font-Inter text-base">
+        <div id="menu" class="hide space-x-10 md:flex mr-5 text-[#312103] font-Inter text-base">
             <button><span class="font-bold">Avaleht</span></button>
             <button><span>Teenused</span></button>
             <button><span>Hinnakiri</span></button>
@@ -38,11 +38,11 @@
         <img src="assets/Rectangle 9.png" alt="headerShadow">
     </div>
 
-    <div id="frame1" class="flex flex-row mt-20 mx-24 space-x-12">
-        <div id="frame1.2" class="flex flex-col md:w-auto">
+    <div id="frame1" class="flex flex-row mt-20 mx-16 space-x-16">
+        <div id="frame1.2" class="flex flex-col w-auto">
             <div id="introduction">
-                <h1 class="text-5xl text-[#312103] font-Inter italic my-5">Kvaliteetsed <span class="font-bold">elektritööd</span></h1>
-                <p1 class="text-[#312103BF] font-Inter text-base">Meie asjatundlikutele elektrikutele ei käi ükski ülesanne üle jõu. Meie laialdaste kogemustega ja täielikult kvalifitseeritud elektrikud on Teie käsutuses <span class="font-bold">Tallinna ja Tartu piirkonnas.</span></p1>
+                <h class="text-5xl text-[#312103] font-Inter italic my-5">Kvaliteetsed <span class="font-bold">elektritööd</span></h>
+                <p class="text-[#312103BF] font-Inter text-base my-5">Meie asjatundlikutele elektrikutele ei käi ükski ülesanne üle jõu. Meie laialdaste kogemustega ja täielikult kvalifitseeritud elektrikud on Teie käsutuses <span class="font-bold">Tallinna ja Tartu piirkonnas.</span></p>
             </div>
             <div id="clientInfo" class="mt-20">
                 <h2 class="mb-5 text-3xl italic text-[#312103] font-Inter">Teeme teile <span class="font-bold">tasuta</span> hinnapakkumise</h2>
@@ -52,18 +52,109 @@
                     <img src="assets/Frame 24.png">
                     <img src="assets/Frame 25.png">
                     <div id="Saada" class="w-full md:w-auto bg-[#FFA700] text-center rounded-lg p-5 mt-5">
-                        <button><span class="text-[#312103BF] font-Inter text-base font-bold">Saada</span></button>
+                        <button><span class="text-[#312103] font-Inter text-base font-bold">Saada</span></button>
                     </div>
                 </div>
             </div>
         </div>
         <div id="frame1.3">
-            <img src="assets/Rectangle 12.png">
+            <img src="assets/Rectangle 12.png" alt="electrcian">
             <div id="underPicText" class="my-10">
-                <h3 class="text-3xl italic text-[#312103] font-Inter">Aitame teid <span class="font-bold">kõigi</span> elektritööde läbiviimisega</h3>
-                <p3 class="text-[#312103BF] font-Inter text-base flex mt-5">Me ei hooli, kas tööde objektiks on kontor, ärihoone, rendipind või teie isiklik kodu, sest pädeva ja kvalifitseeritud elektriku palkamine on tähtis igale kinnisvaraobjekti üürileandjale, ettevõttele ja koduomanikule.</p3>
+                <h2 class="text-3xl italic text-[#312103] font-Inter">Aitame teid <span class="font-bold">kõigi</span> elektritööde läbiviimisega</h2>
+                <p class="text-[#312103BF] font-Inter w-auto text-base flex mt-5">Me ei hooli, kas tööde objektiks on kontor, ärihoone, rendipind või teie isiklik kodu, sest pädeva ja kvalifitseeritud elektriku palkamine on tähtis igale kinnisvaraobjekti üürileandjale, ettevõttele ja koduomanikule.</p>
             </div>
         </div>
+    </div>
+
+    <div id="frame2" class="">
+        <img class="-mb-96" src="assets/Rectangle 18.png" alt="orange triangels">
+        <div id="teenused" class="">
+            <h class="text-5xl italic from-[#312103] font-bold font-Inter">Meie teenused</h>
+        </div>
+        <div id="3colums" class="">
+
+            <div id="column1" class="flex flex-row justify-center ">
+                <img class="flex flex-row w-1/3" src="assets/Rectangle 19.png" alt="box">
+                <img class="flex flex-row w-1/3" src="assets/Rectangle 19.png" alt="box">
+                <img class="flex flex-row w-1/3" src="assets/Rectangle 19.png" alt="box">
+            </div>
+            <img class="flex flex-col" src="assets/Rectangle 22.png" alt="">
+        </div>
+    </div>
+
+    <div id="frame3" class="flex flex-row space-x-20 mx-10">
+        <img class="w-1/2" src="assets/Rectangle 19 (1).png" alt="electrician">
+        <div id="Usaldus" class="flex flex-col w-1/2 my-5">
+            <h2 class="text-3xl italic text-[#312103] font-Inter">Usalda oma elektritöö <span class="font-bold">profesionaali kätesse</span></h2>
+            <p class="text-[#312103BF] font-Inter text-base my-5">Alati on oluline meeles pidada, et kõik elektrisüsteemidega seotud tööd peab teostama selleks volitatud isik, kellel on olemas nii vajalik väljaõpe kui kogemused.</p>
+            <p class="text-[#312103BF] font-Inter text-base">Lisaks oma isiklikule kodule peavad kinnisvaraomanikud tagama elektriohutuse eeskirjadele järgimise ka kõikides üürileantavates objektides. Me hoolitseme kõigi teie kinnisvaraga seotud elektritööde eest, olgu need siis suured või väikesed. Võite meie poole pöörduda iga probleemiga - alates suitsuandurite paigaldamisest kuni kogu hoone elektrisüsteemide väljavahetamiseni. Me kindlustame, et tagatud on Teie töötajate, üürnike ja perekonna turvalisus.</p>
+            <div id="button" class="w-fit bg-[#FFA700] text-center rounded-lg px-10 py-5 mt-5">
+                <button><span class="text-[#312103] font-Inter text-lg font-bold">Tutvu meie kogemustepagasiga</span></button>
+            </div>
+        </div>
+    </div>
+
+    <div id="frame4">
+        <div id="lubadus" class="mt-10">
+            <h class="text-[#FFA700] font-Inter text-6xl font-bold italic flex justify-center my-10">Meie lubadus teile</h>
+            <div id="emojis" class="flex flex-row">
+                <div id="emoji1" class="flex flex-col w-1/3">
+                    <div id="stars" class="flex justify-center my-10">
+                        <img src="assets/auto_awesome.png" alt="stars">
+                    </div>
+                    <h2 class="text-[#FFA700] font-Inter text-3xl italic flex justify-center">Kvaliteet</h2>
+                    <p class="text-lg text-[#FFA700] font-Inter italic text-center w-80 h-16 my-5">Tööd teeme alati korrektselt ja kvaliteetselt</p>
+                </div>
+                <div id="emoji2" class="flex flex-col w-1/3">
+                    <div id="speedArrow" class="flex justify-center my-14">
+                        <img src="assets/speed.png" alt="speed">
+                    </div>
+                    <h2 class="text-[#FFA700] font-Inter text-3xl italic flex justify-center">Kiirus</h2>
+                    <p class="text-lg text-[#FFA700] font-Inter italic text-center w-80 h-16 my-5">Kiirus on oluline nii teie kui meie jaoks. Seega ei mingit venitamist</p>
+                </div>
+                <div id="emoji3" class="flex flex-col w-1/3">
+                    <div id="smileFace" class="flex justify-center my-9">
+                        <img src="assets/sentiment_very_satisfied.png" alt="smiley">
+                    </div>
+                    <h2 class="text-[#FFA700] font-Inter text-3xl italic flex justify-center">Sõbralik teenindus</h2>
+                    <p class="text-lg text-[#FFA700] font-Inter italic text-center w-80 h-16 my-5">Oleme alati rõõmsad ja abivalmid ja hätta ei jäta kedagi</p>
+                </div>
+            </div>
+            <div id="button" class="w-fit  bg-[#FFA700] rounded-lg px-10 py-5 mt-5">
+                <button><span class="text-[#312103] font-Inter text-lg font-bold">Võta meiega ühendust</span></button>
+            </div>
+        </div>
+        <img src="assets/Group 26.png" alt="1">
+        <img src="assets/Rectangle 33.png" alt="2">
+        <img src="assets/Rectangle 32.png" alt="3">
+        <img src="assets/Rectangle 31.png" alt="4">
+    </div>
+
+    <div id="frame5" class="flex flex-row space-x-20 mx-10">
+        <img src="assets/Rectangle 26.png" alt="burnt man">
+        <img class="border-4 border-indigo-500/100" src="assets/Rectangle 27.png" alt="fog">
+        <div id="vajaduse" class="my-5">
+            <h2 class="text-3xl italic text-[#312103] font-Inter">Miks vajate kindlasti kvalifitseeritud elektrikut?</h2>
+            <p class="text-[#312103BF] font-Inter text-base my-5 ">Elektriohutuse tagamist puudutavad mitmed õigusaktid ja tehnilised dokumendid ning vastavad põhiteadmised on kohustuslikud kõigile elektripaigaldistega töötavatele isikutele. Elektritöid reguleerib Eesti Vabariigis Elektriohutusseadus, mille sätted on välja töötatud selleks, et vältida ja vähendada elektrist tulenevate ohtude ja elektromagnetiliste häirete mõju inimestele, varale ja keskkonnale</p>
+            <p class="text-[#312103BF] font-Inter text-base">Elektrisüsteemide ja vastavate seadmete seisukord samuti oluline praktilisel tasandil, sest töötavad valgustid, pistikupesad, soe vesi ja küttesüsteemid on kõik väikesed detailid, mis muudavad meie elu- või kontoriruumid võimalikult mugavaks. Ennetavad elektritööd, näiteks pistikupesade, lülitite või isegi kaitsekilbi kontrollimine, tagavad Teile kindlustunde ja meelerahu.</p>
+            <div id="button" class="w-fit bg-[#FFA700] rounded-lg px-10 py-5 mt-10">
+                <button><span class="text-[#312103] font-Inter text-lg font-bold">ProfiElekter OÜ litsentsid</span></button>
+            </div>
+        </div>
+    </div>
+
+    <div id="frame6" class="flex flex-row space-x-20 mx-10">
+        <div id="tehniline" class=" my-5">
+            <h2 class="text-3xl italic text-[#312103] font-Inter flex justify-end">Jäta kõik tehniline meie hooleks</h2>
+            <p class="text-[#312103BF] font-Inter text-base my-5 text-right">Elektriohutuse tagamist puudutavad mitmed õigusaktid ja tehnilised dokumendid ning vastavad põhiteadmised on kohustuslikud kõigile elektripaigaldistega töötavatele isikutele. Elektritöid reguleerib Eesti Vabariigis Elektriohutusseadus, mille sätted on välja töötatud selleks, et vältida ja vähendada elektrist tulenevate ohtude ja elektromagnetiliste häirete mõju inimestele, varale ja keskkonnale</p>
+            <p class="text-[#312103BF] font-Inter text-base text-right">Elektrisüsteemide ja vastavate seadmete seisukord samuti oluline praktilisel tasandil, sest töötavad valgustid, pistikupesad, soe vesi ja küttesüsteemid on kõik väikesed detailid, mis muudavad meie elu- või kontoriruumid võimalikult mugavaks. Ennetavad elektritööd, näiteks pistikupesade, lülitite või isegi kaitsekilbi kontrollimine, tagavad Teile kindlustunde ja meelerahu.</p>
+        </div>
+        <img class="" src="assets/Rectangle 28.png" alt="working man">
+        <img class=" border-4 border-indigo-500/100" src="assets/Rectangle 29.png" alt="fog">
+    </div>
+
+    <div id="footer">
+        <img src="assets/Group 23.png" alt="footer">
     </div>
 
   </div>
