--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 <body>
   <div class="bg-[#FDFDFD]">
 
-    <div class="flex flex-row justify-between shadow-lg">
+    <section class="flex flex-row justify-between shadow-lg">
         <div class="flex flex-row">
             <div class="flex justify-start">
                 <img src="assets/Group 1.png" alt="logo">
@@ -40,18 +40,18 @@
                 <button>Kontakt</button>
             </div>
         </div>
-    </div>
+    </section>
 
-    <div class="flex flex-col xl:flex-row justify-center mt-20 mb-5 px-20 space-x-20">
+    <section class="flex flex-col xl:flex-row justify-center mt-20 mb-5 px-20 space-x-20">
         <div class="flex flex-col">
             <div class="w-full">
-                <h class="text-5xl text-[#312103] font-Inter italic my-5">Kvaliteetsed <span class="font-bold">elektritööd</span></h>
+                <h class="text-5xl text-[#312103] font-Inter italic my-5">Kvaliteetsed<span class="font-bold"> elektritööd</span></h>
                 <p class="text-[#312103BF] font-Inter text-base my-5">Meie asjatundlikutele elektrikutele ei käi ükski ülesanne üle jõu. Meie laialdaste kogemustega ja täielikult kvalifitseeritud elektrikud on Teie käsutuses <span class="font-bold">Tallinna ja Tartu piirkonnas.</span></p>
             </div>
             <div class="mt-20">
                 <h2 class="mb-5 text-3xl italic text-[#312103] font-Inter">Teeme teile <span class="font-bold">tasuta</span> hinnapakkumise</h2>
                     <img class="min-w-full" src="assets/Frame 28 (1).png" alt="form">
-                <div class="w-full md:w-auto bg-[#FFA700] text-center rounded-lg p-5 mt-5">
+                <div class="w-full xl:w-auto bg-[#FFA700] text-center rounded-lg p-5 mt-5">
                     <button class="text-[#312103] font-Inter text-base font-bold">Saada</button>
                 </div>
             </div>
@@ -63,7 +63,7 @@
                 <p class="text-[#312103BF] font-Inter w-auto text-base flex mt-5">Me ei hooli, kas tööde objektiks on kontor, ärihoone, rendipind või teie isiklik kodu, sest pädeva ja kvalifitseeritud elektriku palkamine on tähtis igale kinnisvaraobjekti üürileandjale, ettevõttele ja koduomanikule.</p>
             </div>
         </div>
-    </div>
+    </section>
 
     <section class="relative">
         <img class="absolute inset-0 w-full" src="assets/Rectangle 18.png" alt="orange triangels">
@@ -71,24 +71,24 @@
             <div class="flex justify-center mb-10">
                 <h class="text-5xl italic from-[#312103] font-bold font-Inter">Meie teenused</h>
             </div>
-            <div class="flex flex-col md:flex-row justify-around">
+            <div class="flex flex-col xl:flex-row justify-around">
                 <div>
-                    <img src="assets/Group 7 (1).png" alt="Üürileandjale">
+                    <img class="" src="assets/Group 7 (1).png" alt="Üürileandjale">
                 </div>
                 <div>
-                    <img src="assets/Group 8 (1).png" alt="Ettevõttele">
+                    <img class="" src="assets/Group 8 (1).png" alt="Ettevõttele">
                 </div>
                 <div>
-                    <img src="assets/Group 9 (1).png" alt="Koduomanikule">
+                    <img class="" src="assets/Group 9 (1).png" alt="Koduomanikule">
                 </div>
             </div>
             <div class="flex justify-center relative">
-                <img class="absolute inset-0 w-full" src="assets/Rectangle 22 (1).png" alt="Ei leidnud sobivat">
+                <img class="absolute inset-0 w-fit xl:w-full" src="assets/Rectangle 22 (1).png" alt="Ei leidnud sobivat">
                 <div class="relative flex flex-row items-center justify-between pt-2">
-                    <div class="flex justify-start">
-                        <h class="text-[#312103] font-Inter italic text-base "><span class="font-bold">Ei leidnud sobivat teenust?</span> Ära muretse - võta meiega ühendust ja leiame kindlasti lahenduse</h>
+                    <div class="flex justify-start w-96 xl:w-full">
+                        <h class="text-[#312103BF] font-Inter text-base italic"><span class="font-bold">Ei leidnud sobivat teenust?</span> Ära muretse - võta meiega ühendust ja leiame kindlasti lahenduse</h>
                     </div>
-                    <div class="flex flex-row justify-end">
+                    <div class="flex flex-col xl:flex-row justify-end">
                         <div>
                             <img src="assets/Frame 21.png" alt="Vaata hinnakirja">
                         </div>
@@ -101,11 +101,11 @@
         </div>
     </section>
 
-    <div class="mt-36 mb-20 flex flex-row space-x-20 px-20 justify-center">
+    <section class="mt-36 mb-20 flex flex-row space-x-20 px-20 justify-center">
         <div>
             <img src="assets/Rectangle 19 (1).png" alt="electrician">
         </div>
-        <div class="md:flex flex-col w-1/2 hidden">
+        <div class="xl:flex flex-col w-1/2 hidden">
             <h2 class="text-3xl italic text-[#312103] font-Inter">Usalda oma elektritöö <span class="font-bold">profesionaali kätesse</span></h2>
             <p class="text-[#312103BF] font-Inter text-base my-5">Alati on oluline meeles pidada, et kõik elektrisüsteemidega seotud tööd peab teostama selleks volitatud isik, kellel on olemas nii vajalik väljaõpe kui kogemused.</p>
             <p class="text-[#312103BF] font-Inter text-base">Lisaks oma isiklikule kodule peavad kinnisvaraomanikud tagama elektriohutuse eeskirjadele järgimise ka kõikides üürileantavates objektides. Me hoolitseme kõigi teie kinnisvaraga seotud elektritööde eest, olgu need siis suured või väikesed. Võite meie poole pöörduda iga probleemiga - alates suitsuandurite paigaldamisest kuni kogu hoone elektrisüsteemide väljavahetamiseni. Me kindlustame, et tagatud on Teie töötajate, üürnike ja perekonna turvalisus.</p>
@@ -113,40 +113,40 @@
                 <button class="text-[#312103] font-Inter text-lg font-bold">Tutvu meie kogemustepagasiga</button>
             </div>
         </div>
-    </div>
+    </section>
 
-    <div class="relative">
+    <section class="relative">
         <img class="absolute inset-0 w-full" src="assets/Rectangle 33 (1).png" alt="bg">
         <img class="absolute inset-0 w-full" src="assets/Rectangle 32 (2).png" alt="bg">
         <img class="absolute inset-0 w-full" src="assets/Rectangle 31 (1).png" alt="bg">
-    </div>
-    <div class="flex flex-col justify-center px-20 pt-28 relative">
-        <h class="text-[#FFA700] font-Inter text-6xl font-bold italic flex justify-center my-10">Meie lubadus teile</h>
-        <div class="flex flex-col justify-center pt-20">
-            <div class="flex flex-col md:flex-row justify-around">
-                <div class="flex flex-col items-center">
-                    <img class="w-32 aspect-square" src="assets/auto_awesome.png" alt="stars">
-                    <h2 class="text-[#FFA700] font-Inter text-3xl italic flex justify-center">Kvaliteet</h2>
-                    <p class="text-lg text-[#FFA700] font-Inter italic text-center w-80 h-16 my-5">Tööd teeme alati korrektselt ja kvaliteetselt</p>
+        <div class="flex flex-col justify-center px-20 pt-28 relative">
+            <h class="text-[#FFA700] font-Inter text-6xl font-bold italic flex justify-center my-10">Meie lubadus teile</h>
+            <div class="flex flex-col justify-center pt-20">
+                <div class="flex flex-col xl:flex-row justify-around">
+                    <div class="flex flex-col items-center">
+                        <img class="w-32 aspect-square" src="assets/auto_awesome.png" alt="stars">
+                        <h2 class="text-[#FFA700] font-Inter text-3xl italic flex justify-center">Kvaliteet</h2>
+                        <p class="text-lg text-[#FFA700] font-Inter italic text-center w-80 h-16 my-5">Tööd teeme alati korrektselt ja kvaliteetselt</p>
+                    </div>
+                    <div class="flex flex-col items-center">
+                        <img class="w-32 aspect-square" src="assets/speed.png" alt="speed">
+                        <h2 class="text-[#FFA700] font-Inter text-3xl italic flex justify-center">Kiirus</h2>
+                        <p class="text-lg text-[#FFA700] font-Inter italic text-center w-80 h-16 my-5">Kiirus on oluline nii teie kui meie jaoks. Seega ei mingit venitamist</p>
+                    </div>
+                    <div class="flex flex-col items-center">
+                        <img class="w-32 aspect-square" src="assets/sentiment_very_satisfied.png" alt="smiley">
+                        <h2 class="text-[#FFA700] font-Inter text-3xl italic flex justify-center">Sõbralik teenindus</h2>
+                        <p class="text-lg text-[#FFA700] font-Inter italic text-center w-80 h-16 my-5">Oleme alati rõõmsad ja abivalmid ja hätta ei jäta kedagi</p>
+                    </div>
                 </div>
-                <div class="flex flex-col items-center">
-                    <img class="w-32 aspect-square" src="assets/speed.png" alt="speed">
-                    <h2 class="text-[#FFA700] font-Inter text-3xl italic flex justify-center">Kiirus</h2>
-                    <p class="text-lg text-[#FFA700] font-Inter italic text-center w-80 h-16 my-5">Kiirus on oluline nii teie kui meie jaoks. Seega ei mingit venitamist</p>
+                <div class="flex justify-center mt-28">
+                    <button class="text-[#312103] bg-[#FFA700] rounded-lg px-10 py-5 font-Inter text-lg font-bold">Võta meiega ühendust</button>
                 </div>
-                <div class="flex flex-col items-center">
-                    <img class="w-32 aspect-square" src="assets/sentiment_very_satisfied.png" alt="smiley">
-                    <h2 class="text-[#FFA700] font-Inter text-3xl italic flex justify-center">Sõbralik teenindus</h2>
-                    <p class="text-lg text-[#FFA700] font-Inter italic text-center w-80 h-16 my-5">Oleme alati rõõmsad ja abivalmid ja hätta ei jäta kedagi</p>
-                </div>
-            </div>
-            <div class="flex justify-center mt-28">
-                <button class="text-[#312103] bg-[#FFA700] rounded-lg px-10 py-5 font-Inter text-lg font-bold">Võta meiega ühendust</button>
             </div>
         </div>
-    </div>
+    </section>
 
-    <div class="flex flex-col md:flex-row justify-center space-x-20 px-20 mt-20">
+    <section class="flex flex-col xl:flex-row justify-center space-x-20 px-20 mt-20">
         <div class="aspect-square relative w-full">
             <img class="absolute inset-0" src="assets/Rectangle 26.png" alt="burnt man">
             <img class="absolute inset-0" src="assets/Rectangle 27.png" alt="fog">
@@ -159,11 +159,11 @@
                 <button class="text-[#312103] font-Inter text-lg font-bold">ProfiElekter OÜ litsentsid</button>
             </div>
         </div>
-    </div>
+    </section>
 
-    <div class="flex flex-col-reverse md:flex-row justify-center space-x-20 px-20 pb-10 pt-20">
-        <div class="my-5 md:text-right">
-            <h2 class="text-3xl italic text-[#312103] font-Inter flex justify-end">Jäta kõik tehniline meie hooleks</h2>
+    <section class="flex flex-col-reverse xl:flex-row justify-center justify-items-start space-x-20 px-20 pb-10 pt-20">
+        <div class="my-5 xl:text-right">
+            <h2 class="text-3xl italic text-[#312103] font-Inter">Jäta kõik tehniline meie hooleks</h2>
             <p class="text-[#312103BF] font-Inter text-base my-5">Elektriohutuse tagamist puudutavad mitmed õigusaktid ja tehnilised dokumendid ning vastavad põhiteadmised on kohustuslikud kõigile elektripaigaldistega töötavatele isikutele. Elektritöid reguleerib Eesti Vabariigis Elektriohutusseadus, mille sätted on välja töötatud selleks, et vältida ja vähendada elektrist tulenevate ohtude ja elektromagnetiliste häirete mõju inimestele, varale ja keskkonnale</p>
             <p class="text-[#312103BF] font-Inter text-base">Elektrisüsteemide ja vastavate seadmete seisukord samuti oluline praktilisel tasandil, sest töötavad valgustid, pistikupesad, soe vesi ja küttesüsteemid on kõik väikesed detailid, mis muudavad meie elu- või kontoriruumid võimalikult mugavaks. Ennetavad elektritööd, näiteks pistikupesade, lülitite või isegi kaitsekilbi kontrollimine, tagavad Teile kindlustunde ja meelerahu.</p>
         </div>
@@ -171,11 +171,11 @@
             <img class="absolute inset-0" src="assets/Rectangle 28.png" alt="working man">
             <img class="absolute inset-0" src="assets/Rectangle 29.png" alt="fog">
         </div>
-    </div>
+    </section>
 
-    <div class="flex justify-center">
+    <section class="flex justify-center">
         <img src="assets/Group 23.png" alt="footer">
-    </div>
+    </section>
 
   </div>
 </body>
